# challtools

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: pypi.yaml  pytest.yml  python-app.yml
challtools/: __init__.py  challenge.schema.json  cli.py  codes.yml  constants.py  context.py  entry.py  plugin.py  types.py  utils.py  validator.py
challtools/builtins/: __init__.py  allchalls.py  build.py  compose.py  ensureid.py  init.py  push.py  solve.py  spoilerfree.py  start.py  validate.py
challtools/templates/default/: DESCRIPTION  challenge.yml
challtools/templates/flask/: DESCRIPTION  challenge.yml
challtools/templates/flask/container/: Dockerfile  nginx.conf  server.py
challtools/templates/php/: DESCRIPTION  challenge.yml
challtools/templates/php/container/: Dockerfile  index.php
challtools/templates/ssh/: DESCRIPTION  challenge.yml
challtools/templates/ssh/container/: Dockerfile  service  sshd_config
challtools/templates/tcp_nsjail/: DESCRIPTION  challenge.yml
challtools/templates/tcp_nsjail/container/: Dockerfile
challtools/templates/tcp_xinetd/: DESCRIPTION  challenge.yml
challtools/templates/tcp_xinetd/container/: Dockerfile  service  xinetd_config
challtools/templates/tls_nsjail/: DESCRIPTION  challenge.yml
challtools/templates/tls_nsjail/container/: Dockerfile  haproxy.cfg
tests/: conftest.py  test_cli.py  test_templates.py  test_utils.py  test_validator.py  utils.py
tests/templates/broken_solution/solution/: Dockerfile
tests/templates/build_error/: challenge.yml
tests/templates/ctf_authors/: ctf.yml
tests/templates/ctf_authors/chall1/: challenge.yml
tests/templates/custom_container_name_multiple/: challenge.yml
tests/templates/custom_container_name_single/: challenge.yml
tests/templates/dockerfile_parse_error/: challenge.yml
tests/templates/has_id/: challenge.yml
tests/templates/minimal_valid/: challenge.yml
tests/templates/regex_flag/: challenge.yml
tests/templates/schema_violation/: challenge.yml
tests/templates/schema_violation_list/: challenge.yml
tests/templates/trivial_tcp_solution/: challenge.yml
(+13 files in other folders)
